# MiVOLO2Cpp

./: CMakeLists.txt
dependencies/: Libtorch.cmake  dependencies.cmake
include/MiVOLO2/: AgeAndGender.hpp  Yolov8.hpp
src/: AgeAndGender.cpp  TimeMeasuring.hpp  Yolov8.cpp
tests/: CMakeLists.txt  main.cpp
